Fix reserve page align with main

--- a/src/components/Reservation/ReservedHotel.css
+++ b/src/components/Reservation/ReservedHotel.css
@@ -1,29 +1,8 @@
-.delete-hotels {
-  /* display: flex;
-    flex-direction: column; */
-  width: 100%;
-}
-
-.info {
-  margin-top: 8px;
-}
 .delete {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 30px;
-}
-
-.hotelList {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
-}
-
-.hotelList ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 
 .hotelItem {
@@ -50,17 +29,20 @@
   color: gray;
 }
 
-.hotelItem img {
-  width: 350px;
-  height: 200px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+.card-img-top {
+  border-radius: 22px 22px 0px 0px;
+  width: 300px;
+  height: 250px;
 }
-.rightarr {
-  float: inline-end;
+
+.hotel-lists {
+  position: relative;
 }
 
 .reservebtn {
+  position: absolute;
+  top: -100px;
+  right: 0;
   width: 132px;
   height: 40px;
   background: #72b600;
@@ -73,12 +55,6 @@
 .reservebtn:hover {
   background: var(--orange-clr);
   color: white;
-}
-
-.hotel-lists {
-  margin-bottom: 10px;
-  justify-content: flex-end;
-  display: flex;
 }
 
 .reserves {
@@ -113,7 +89,7 @@ span {
   align-items: center;
 }
 .checks p {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .out span {
